--- a/desknet.html
+++ b/desknet.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"> 
-<HTML><HEAD><TITLE> DESK DATABASE NETWORK </TITLE><!-- 
+<HTML><HEAD><TITLE> DESK DATABASE NETWORK </TITLE>
+<!-- 
 a:link { 
  color: #ffffff; 
  text-decoration: none; 
